# WebSurferX

./: .gitignore  FEATURES LEFT.md  Makefile  README.md  dub.json  dub.selections.json
source/: main.d
source/core/: config.d  keybinds.d  search.d  utils.d
source/internal_pages/: bookmarks.d  common.d  downloads.d  history.d  scheme.d  settings.d  start.d  tabs.d
source/storage/: adblock.d  bookmarks.d  history.d  paths.d  session.d  settings.d
source/sync/: ffi.d
source/ui/: downloads.d  findbar.d  menu.d  suggestions.d  tab.d  toolbar.d  window.d
sync_client/: Cargo.toml
sync_client/src/: lib.rs
